--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
             .packages
           key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.yaml') }}
 
-      # 4️⃣ Ensure Android folder exists or generate
+      # 4️⃣ Ensure minimal Android files exist
       - name: Ensure Android folder
         run: |
           if [ ! -f "android/app/build.gradle" ] || [ ! -f "android/gradle/wrapper/gradle-wrapper.properties" ]; then
@@ -44,7 +44,7 @@ jobs:
         run: flutter pub get
 
       # 6️⃣ Lock critical plugin versions
-      - name: Lock critical plugins
+      - name: Lock plugin versions
         run: |
           flutter pub add geolocator:^14.0.2
           flutter pub add audioplayers:^6.1.0
@@ -71,7 +71,7 @@ jobs:
           echo "sdk.dir=/usr/lib/android-sdk" >> android/local.properties
           echo "✅ local.properties created"
 
-      # 🔟 Check launcher icon
+      # 🔟 Check launcher icon exists
       - name: Check launcher icon
         run: |
           if [ ! -f "assets/logo.png" ]; then
