--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: lifesync_ai_alarm
-description: LifeSync AI Alarm App (One-file build)
+description: AI powered alarm app with smart unlocks and wallet (future UPI Auto-Cut 🔐).
 publish_to: "none"
 
 version: 1.0.0+1
@@ -11,43 +11,40 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Notifications & alarms
-  flutter_local_notifications: ^17.2.1
-  timezone: ^0.9.2
-  intl: ^0.19.0
-
-  # Audio
-  audioplayers: ^6.1.0
-  record: ^5.1.2
-
-  # Storage
+  # Core packages
+  cupertino_icons: ^1.0.8
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
   shared_preferences: ^2.3.2
   path_provider: ^2.1.4
 
-  # Permissions & unlock modes
+  # Alarm features
+  audioplayers: ^6.1.0
+  geolocator: ^11.1.0
+  camera: ^0.11.0+2
   permission_handler: ^11.3.1
-  local_auth: ^2.3.0
-  pedometer: ^4.0.1
-  geolocator: ^14.0.2
-  file_picker: ^8.0.5
 
-  # Core Flutter material icons/fonts
-  flutter_svg: ^2.0.10
+  # UI / Utils
+  intl: ^0.19.0
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.12.0
-  
-flutter_icons:
-  android: true
-  ios: false
-  image_path: "assets/logo.png"
-  
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
+
+  # For custom launcher icons
+  flutter_launcher_icons: ^0.14.1
 
 flutter:
   uses-material-design: true
 
   assets:
+    - assets/logo.png
     - assets/alarm.mp3
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/logo.png"
