--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: lifesync_ai_alarm
-description: AI powered alarm app with smart unlocks and wallet (future UPI Auto-Cut 🔐).
+description: AI powered alarm app with smart unlocks and wallet (future UPI Auto-Cut ).
 publish_to: "none"
 
 version: 1.0.0+1
