--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,50 +1,30 @@
-name: lifesync_ai_alarm
-description: AI powered alarm app with smart unlocks and wallet (future UPI Auto-Cut ).
+name: lifesync_ai
+description: "AI powered alarm app with smart unlocks and wallet (future UPI Auto-Cut Locked)"
 publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # Core packages
   cupertino_icons: ^1.0.8
-  flutter_local_notifications: ^17.2.3
-  timezone: ^0.9.4
-  shared_preferences: ^2.3.2
-  path_provider: ^2.1.4
-
-  # Alarm features
-  audioplayers: ^6.1.0
+  flutter_local_notifications: ^17.1.2
+  timezone: ^0.9.2
+  audioplayers: ^6.0.0
   geolocator: ^12.0.0
-  camera: ^0.11.0+2
   permission_handler: ^11.3.1
-
-  # UI / Utils
-  intl: ^0.19.0
+  path_provider: ^2.1.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
-  # For custom launcher icons
-  flutter_launcher_icons: ^0.14.1
-
 flutter:
   uses-material-design: true
-
   assets:
     - assets/logo.png
-    - assets/alarm.mp3
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "assets/logo.png"
-  adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/logo.png"
